fixed searching twice not showing correct results

--- a/front-end/source/pages/HomePageSignedIn/HomePageSignedIn.css
+++ b/front-end/source/pages/HomePageSignedIn/HomePageSignedIn.css
@@ -206,3 +206,7 @@ footer {
 .modal button:hover {
   background-color: #042a7d;
 }
+
+.listing.hidden {
+  display: none;
+}
